syntax = "proto3";

package pb;

option go_package = "github.com/siddheshRajendraNimbalkar/collage-prject-backend/pb";

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string created_by = 6; 
  string created_at = 7;
  string product_url = 8; 
  string category = 9; 
  string type = 10; 
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 stock = 4;
  string product_url = 5; 
  string category = 6; 
  string type = 7; 
}

message GetProductRequest {
  string id = 1;
}

message GetOnlyProductRequest {
  string id = 1;
}

message ListAllProductsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListProductsResponse {
  repeated Product products = 1;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string product_url = 6; 
  string category = 7; 
  string type = 8; 
}

message DeleteProductRequest {
  string id = 1;
}

message ProductResponse {
  Product product = 1;
}

message DeleteProductResponse {
  string message = 1;
}

message ListAllProductsByNameRequest {
  string name = 1;
}

message ListAllProductsByNameResponse {
  repeated Product products = 1;
}

message ListAllProductsByCategoryRequest {
  string category = 1;
}

message ListAllProductsByTypeRequest {
  string type = 1;
  string category = 2;
}

message ListAllProductsByCategoryResponse {
  repeated Product products = 1;
}

message ListAllProductsByCreateBy{
  
}